--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,53 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>{% block title %}My Shop{% endblock %}</title>
-	<!-- CSS -->
-	<link rel="stylesheet" href="https://bootswatch.com/4/sandstone/bootstrap.min.css">
-	<!-- Font Awesome -->
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{% block title %}Selling.{% endblock %}</title>
+
+    <!--    Bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Font Awesome -->
 	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-	<style>
-		.fa-stack[data-count]:after {
-		  position: absolute;
-		  right: 0%;
-		  top: 0%;
-		  content: attr(data-count);
-		  font-size: 40%;
-		  padding: .6em;
-		  border-radius: 999px;
-		  line-height: .75em;
-		  color: white;
-		  color: #DF0000;
-		  text-align: center;
-		  min-width: 2em;
-		  font-weight: bold;
-		  background: white;
-		  border-style: solid;
-		}
-
-		.fa-circle {
-		  color: #DF0000;
-		}
-
-		.red-cart {
-		  color: #333;
-		  background: white;
-		}
-
-	</style>
 </head>
 <body>
-	{% include 'shop/navbar.html' %}
+    {% include 'shop/navbar.html' %}
 
-	<div class="container">
-		{% block content %}
-		{% endblock %}	
-	</div>
-
-	<!-- JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!--    Javascript-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
