--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -8,24 +8,44 @@
 {% block content %}
 	<div class="row">
 		<div class="col-4">
-				<img src="
+				<img src='
 					{% if product.image %}
 						{{ product.image.url }}
 					{% else %}
 						{% static "img/no_image.png" %}
-					{% endif %}"
-					style="width: 100%; margin-left: 5px;">
+					{% endif %}'
+					style="width: 100%;">
 		</div>
 		<div class="col-4">
-				<h1>{{ product.name }}</h1>
-				<small><a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></small>
-				<p><b>₹</b> {{ product.price }}</p>
+				<h5 class="dark">{{ product.name }}</h5>
+				<a href="{{ product.category.get_absolute_url }}" class="badge badge-success">
+					{{ product.category }}
+				</a>
+
+				<h6><b>₹</b> {{ product.price }}</h6>
+
 				<form action="{% url 'cart:cart_add' product.id %}" method="POST">
 					{{ cart_product_form }}
 					{% csrf_token %}
 					<input type="submit" value="Add to cart" class="btn btn-primary btn-sm">
 				</form>
-				{{ product.description|linebreaks }}
+				<div class="jumbotron jumbotron-fluid">
+					<div class="container">
+						<p class="lead">
+							{{ product.description|linebreaks }}
+						</p>
+					</div>
+				</div>
 		</div>
 	</div>
 {% endblock %}
+<style>
+a {
+    color: #f4f4f4;
+    text-decoration: none;
+}
+a:hover {
+    color: #f4f4f4;
+    text-decoration: none;
+}
+</style>
