--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -8,38 +8,52 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-2">
-  	<h3>Categories</h3>
-  	<ul class="list-group">
-  		<li class="list-group-item bg-secondary">
-  			<a href="{% url 'shop:product_list' %}" class="text-info">All</a>
-  		</li>
-  		{% for c in categories %}
-  			<li {% if category.slug == c.slug %}class="list-group-item"{% else %}class="list-group-item"{% endif %}>
-  				<a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
-  			</li>
-  		{% endfor %}
-  	</ul>
-  </div>
-  <div class="col-10">
-  	<h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
-      
-    <div class="row">
-          {% for product in products %}
-          <div class="card" style="width: 18rem; margin-left: 5px; margin-bottom: 5px; border-radius: 0">
-              <a href="{{ product.get_absolute_url }}">
-                  <img src="{% if product.image %}{{ product.image.url }}{% else %}{% endif %}" alt="This is {{ product.name }}" class="card-img-top">
-              </a>
-              <div class="card-body">
-                <a href="{{ product.get_absolute_url }}"><p style="margin:0; padding: 0;" class="text-center">{{ product.name }}</p></a>
-                <br>
-                <p class="text-center"><b>₹</b>{{ product.price }}</p>
-              </div>
-          </div>
-          {% endfor %}
+    <div class="col-3">
+        <ul class="list-group">
+
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <a href="{% url 'shop:product_list'%}" class="text-dark">All</a>
+            </li>
+
+            {% for c in categories %}
+                <li {% if category.slug == c.slug %}class="list-group-item"{% else %}class="list-group-item"{% endif %}>
+                    <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+                    <span class="badge badge-primary badge-pill">14</span>
+                </li>
+            {% endfor %}
+
+        </ul>
     </div>
 
 
-  </div>
+    <div class="col-9">
+        <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
+
+        <div class="row">
+            {% for product in products %}
+                <div class="card" style="width: 12rem; margin-left: 5px; margin-bottom: 5px; border-radius: 0">
+                    <a href="{{ product.get_absolute_url }}">
+                      <img src="{% if product.image %}{{ product.image.url }}{% else %}{% endif %}" alt="This is {{ product.name }}" class="card-img-top">
+                    </a>
+                    <div class="card-body">
+                        <a href="{{ product.get_absolute_url }}"><p style="margin:0; padding: 0;" class="text-center text-dark">{{ product.name|truncatewords:5 }}</p></a>
+                        <hr>
+                        <p class="text-center"><b>₹</b>{{ product.price }}</p>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 </div>
 {% endblock %}
+<style>
+a {
+    color: #f4f4f4;
+    text-decoration: none;
+}
+a:hover {
+    color: #f4f4f4;
+    text-decoration: none;
+}
+</style>
+
