--- a/shop/templates/shop/navbar.html
+++ b/shop/templates/shop/navbar.html
@@ -1,17 +1,17 @@
-<nav class="site-header sticky-top py-1 bg-dark">
+<nav class="site-header sticky-top bg-dark">
   <div class="container d-flex flex-column flex-md-row justify-content-between">
-    <a class="py-2 text-warning" href='{% url "shop:product_list" %}'>
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
-    </a>
+    <a class="py-1 text-warning" href='{% url "shop:product_list" %}'>
+      <svg xmlns="http://www.w3.org/2000/svg" id="box" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
+	</a>
 		{% with total_items=cart|length %}
 			{% if cart|length > 0 %}
-				<a href="{% url 'cart:cart_detail' %}" class="py-2 d-none d-md-inline-block">
+				<a href="{% url 'cart:cart_detail' %}" class="py-1 d-none d-md-inline-block">
 					<span class="fa-stack fa-1x has-badge" data-count="{{ total_items }}">
 					  <i style="" class="fa fa-shopping-cart"></i>
 					</span>
 				</a>
 			{% else %}
-				<a href="{% url 'cart:cart_detail' %}" class="py-2 d-none d-md-inline-block">
+				<a href="{% url 'cart:cart_detail' %}" class="py-1 d-none d-md-inline-block">
 					<span class="fa-stack fa-1x fa-circle has-badge" data-count="{{ total_items }}">
 					  <i style="" class="fa fa-shopping-cart"></i>
 					</span>
@@ -43,6 +43,17 @@
 }
 .red-cart {
 	color: #DF0000; background:white;
+}
+#box {
+	animation: infinite-spinning 1s infinite linear;
+}
+@keyframes infinite-spinning {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 </style>
 
