--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -1,58 +1,193 @@
 {% extends "shop/base.html" %}
-
 {% block title %}
 	Checkout
 {% endblock %}
 
 {% block content %}
-<h1>Checkout</h1>
-<div class="row">
 
+<div class="row">
 	<!-- Checkout Form -->
-	<div class="col-8">
-		<form action="." method="POST">
-			<div class="form group-row">
-				<div class="form-group row">
-				    {{ form.first_name }}
-				</div>
-				<div class="form-group row">
-					{{ form.last_name }}
-				</div>
-				<div class="form-group row">
-					{{ form.email }}
-				</div>
-				<div class="form-group row">
-					{{ form.mobile }}
-				</div>
-				<div class="form-group row">
-					{{ form.postal_code }}
-				</div>
-				<div class="form-group row">
-					{{ form.city }}
-				</div>
-				<div class="form-group row">
-					{{ form.address }}
-				</div>
-				<input type="submit" value="Place Order" class="btn btn-secondary btn-lg btn-block">
+	<div class="container">
+		<div class="text-center">
+			<h2>Checkout form</h2>
+		</div>
+
+		<div class="row">
+			<div class="col-md-4 order-md-2 mb-4">
+				{% with total_items=cart|length %}
+					<h4 class="d-flex justify-content-between align-items-center mb-3">
+						<span class="badge badge-warning badge-pill">Total Items</span>
+						<span class="badge badge-secondary badge-pill">{{ total_items }}</span>
+					</h4>
+				{% endwith %}
+				<ul class="list-group mb-3">
+					{% for item in cart %}
+						<li class="list-group-item d-flex justify-content-between lh-condensed">
+							<div>
+								<h6 class="my-0">{{ item.product.name| slice:":20" }}</h6>
+								<small class="text-muted">Brief description</small>
+							</div>
+							<span class="text-muted">{{ item.total_price }}</span>
+
+						</li>
+					{% endfor %}
+
+					<li class="list-group-item d-flex justify-content-between bg-light">
+						<div class="text-success">
+							<h6 class="my-0">Promo code</h6>
+							<small>EXAMPLECODE</small>
+						</div>
+						<span class="text-success">-$5</span>
+					</li>
+					<li class="list-group-item d-flex justify-content-between">
+						<span>Total (₹)</span>
+						<strong>{{ cart.get_total_price }}</strong>
+					</li>
+				</ul>
+
+				<form class="card p-2">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Promo code">
+						<div class="input-group-append">
+							<button type="submit" class="btn btn-success">Redeem</button>
+						</div>
+					</div>
+				</form>
+	        </div>
+
+			<div class="col-md-8 order-md-1">
+				<h4 class="mb-3">Billing address</h4>
+				<form class="needs-validation" action="." method="POST">
+					<div class="row">
+						<div class="col-md-6 mb-3">
+							{{ form.first_name }}
+							<div class="invalid-feedback">
+								Valid first name is required.
+							</div>
+						</div>
+						<div class="col-md-6 mb-3">
+							{{ form.last_name }}
+							<div class="invalid-feedback">
+								Valid last name is required.
+							</div>
+						</div>
+					</div>
+
+					<div class="mb-3">
+						<label for="email">Email</label>
+						<div class="input-group">
+							<div class="input-group-prepend">
+								<span class="input-group-text">@</span>
+							</div>
+							{{ form.email }}
+							<div class="invalid-feedback" style="width: 100%;">
+								Your email is required.
+							</div>
+						</div>
+					</div>
+
+
+					<div class="mb-3">
+						<label for="address">Address</label>
+						{{ form.address }}
+						<div class="invalid-feedback">
+							Please enter your shipping address.
+						</div>
+					</div>
+
+					<div class="row">
+
+						<div class="col-md-4 mb-4">
+							<label for="postal_code">Postal Code</label>
+							{{ form.postal_code }}
+							<div class="invalid-feedback">
+								Zip code required.
+							</div>
+						</div>
+						<div class="col-md-4 mb-4">
+							<label for="city">City</label>
+							{{ form.city }}
+							<div class="invalid-feedback">
+								City required.
+							</div>
+						</div>
+						<div class="col-md-4 mb-4">
+							<label for="mobile">Mobile</label>
+							{{ form.mobile }}
+							<div class="invalid-feedback">
+								Mobile required.
+							</div>
+						</div>
+					</div>
+					<hr class="mb-4">
+					<div class="custom-control custom-checkbox">
+						<input type="checkbox" class="custom-control-input" id="same-address">
+						<label class="custom-control-label" for="same-address">Shipping address is the same as my billing
+							address</label>
+					</div>
+					<div class="custom-control custom-checkbox">
+						<input type="checkbox" class="custom-control-input" id="save-info">
+						<label class="custom-control-label" for="save-info">Save this information for next time</label>
+					</div>
+					<hr class="mb-4">
+
+					<h4 class="mb-3">Payment</h4>
+
+					<div class="d-block my-3">
+						<div class="custom-control custom-radio">
+							<input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked
+								required>
+							<label class="custom-control-label" for="credit">Credit card</label>
+						</div>
+						<div class="custom-control custom-radio">
+							<input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
+							<label class="custom-control-label" for="debit">Debit card</label>
+						</div>
+						<div class="custom-control custom-radio">
+							<input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
+							<label class="custom-control-label" for="paypal">PayPal</label>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6 mb-3">
+							<label for="cc-name">Name on card</label>
+							<input type="text" class="form-control" id="cc-name" placeholder="" required>
+							<small class="text-muted">Full name as displayed on card</small>
+							<div class="invalid-feedback">
+								Name on card is required
+							</div>
+						</div>
+						<div class="col-md-6 mb-3">
+							<label for="cc-number">Credit card number</label>
+							<input type="text" class="form-control" id="cc-number" placeholder="" required>
+							<div class="invalid-feedback">
+								Credit card number is required
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-3 mb-3">
+							<label for="cc-expiration">Expiration</label>
+							<input type="text" class="form-control" id="cc-expiration" placeholder="" required>
+							<div class="invalid-feedback">
+								Expiration date required
+							</div>
+						</div>
+						<div class="col-md-3 mb-3">
+							<label for="cc-cvv">CVV</label>
+							<input type="text" class="form-control" id="cc-cvv" placeholder="" required>
+							<div class="invalid-feedback">
+								Security code required
+							</div>
+						</div>
+					</div>
+					<hr class="mb-4">
+					<button class="btn btn-warning btn-lg btn-block" type="submit">Continue to checkout</button>
+					{% csrf_token %}
+				</form>
 			</div>
-			{% csrf_token %}
-		</form>
+		</div>
 	</div>
 	<!-- Checkout Form Ends Here -->
-	
-	<!-- Price Detail -->
-	<div class="col-3">
-		<h3>Order Details</h3>
-		<ul class="list-group" style="border-left: 5px solid #555;">
-			{% for item in cart %}
-				<li class="list-group-item">
-					{{ item.quantity }} &times; {{ item.product.name }}
-					<span><b>₹</b> {{ item.total_price }}</span>
-				</li>
-			{% endfor %}
-		</ul>
-		<p class="bg-info text-center">Total: <b>₹</b> {{ cart.get_total_price }}</p>
-	</div>
-	<!-- Price Details ends here -->
 </div>
 {% endblock %}
